# cglm

./: .travis.yml  CMakeLists.txt  Doxyfile.in  NOTICE.txt  OPTIM.md  README.md  appveyor.yml  cglm.c  cglm.h  cglm_bench.c  cglm_debug.h  cglm_tests.c  configure  run_benchmark.sh  run_linter.sh
code/: cglm.c
code/tests/: test_cglm.c
include/: cglm.h
